--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,10 +6,10 @@ body {
     Helvetica Neue, sans-serif;
 }
 
-a {
+/* a {
   color: inherit;
   text-decoration: none;
-}
+} */
 
 * {
   box-sizing: border-box;
