--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,10 +10,10 @@ body {
     Helvetica Neue, sans-serif;
 }
 
-/* a {
-  color: inherit;
+a {
+  color: blue;
   text-decoration: none;
-} */
+}
 
 * {
   box-sizing: border-box;
